objects/Setup__c.object
<CustomObject>
    <fields>
        <fullName>Show_Notes_on_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Admins to write an additional comment for all transcript documents.</description>
        <label>Show Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Points_Balance_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines whether or not to display the student&apos;s points balance in the student portal.</description>
        <inlineHelpText>This will display the points balance of a student in portal.</inlineHelpText>
        <label>Show Points Balance in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Section_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to display Section comments on Progress Reports/Report Cards</description>
        <inlineHelpText>Check this to display Section comments on Progress Reports/Report Cards</inlineHelpText>
        <label>Show Section Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Sectional_Attendance_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Sectional Attendance in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Sectional_Attendance_on_Report_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Sectional Attendance on Report Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Semester_Grades_On_Report_Cards__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This determines if grades marked as &quot;Semester Grades&quot; show up on progress reports/report cards</inlineHelpText>
        <label>Show Semester Grades On Report Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Signature_on_Transcripts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if the Signature section displays on the transcript.</inlineHelpText>
        <label>Show Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Standard_Grades__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to display Standard or Strand grades on Progress Reports/Report Cards</description>
        <inlineHelpText>Check this to display Standard or Strand grades on Progress Reports/Report Cards</inlineHelpText>
        <label>Show Standard Grades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Standard_Scale_on_Report_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Standard Grade Normalization legend on Report Cards and Progress Reports?</description>
        <inlineHelpText>Show Standard Grade Normalization legend on Report Cards and Progress Reports?</inlineHelpText>
        <label>Show Standard Scale on Report Cards?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Standards_in_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to display Standard Grades in the Portal.</inlineHelpText>
        <label>Show Standards in Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_School__c</fullName>
        <formula>School__r.Split_School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Grade_Mastery_Threshold__c</fullName>
        <inlineHelpText>What is the definition for mastery of standards for this school? This number will be used to determine standard mastery on reports.</inlineHelpText>
        <label>Standard Grade Mastery Threshold</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_1_Spanish__c</fullName>
        <inlineHelpText>What is the title that should display in Spanish for a Standard Level 1? (ie: Area of Concern) This will display on Report Cards and Progress Reports if user selects &quot;Show Standards&quot; on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Title 1 Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_1__c</fullName>
        <description>Title for standard grades = 1</description>
        <inlineHelpText>What is the title that should display for a Standard Level 1? (ie: Area of Concern) This will display on Report Cards and Progress Reports if user selects &quot;Show Standards&quot; on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Title 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_2_Spanish__c</fullName>
        <inlineHelpText>What is the title that should display in Spanish for a Standard Level 2? (ie: Developing) This will display on Report Cards and Progress Reports if user selects &quot;Show Standards&quot; on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Title 2 Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_2__c</fullName>
        <inlineHelpText>What is the title that should display for a Standard Level 2? (ie: Developing) This will display on Report Cards and Progress Reports if user selects &quot;Show Standards&quot; on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Title 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_3_Spanish__c</fullName>
        <inlineHelpText>What is the title that should display in Spanish for a Standard Level 3? (ie: Proficient) This will display on Report Cards and Progress Reports if user selects &quot;Show Standards&quot; on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Title 3 Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_3__c</fullName>
        <inlineHelpText>What is the title that should display for a Standard Level 3? (ie: Proficient) This will display on Report Cards and Progress Reports if user selects &quot;Show Standards&quot; on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Title 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Description_1_Spanish__c</fullName>
        <inlineHelpText>What is the description in Spanish  for a Standard with a Level 1? This will display on Report Cards and Progress report if &quot;Show Standards&quot; is selected on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Legend Description 1 Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Description_1__c</fullName>
        <inlineHelpText>What is the description for a Standard with a Level 1? This will display on Report Cards and Progress report if &quot;Show Standards&quot; is selected on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Legend Description 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Description_2_Spanish__c</fullName>
        <inlineHelpText>What is the description in Spanish  for a Standard with a Level 2? This will display on Report Cards and Progress report if &quot;Show Standards&quot; is selected on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Legend Description 2 Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Description_2__c</fullName>
        <inlineHelpText>What is the description for a Standard with a Level 2? This will display on Report Cards and Progress report if &quot;Show Standards&quot; is selected on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Legend Description 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Description_3_Spanish__c</fullName>
        <inlineHelpText>What is the description in Spanish  for a Standard with a Level 3? This will display on Report Cards and Progress report if &quot;Show Standards&quot; is selected on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Legend Description 3 Spanish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Description_3__c</fullName>
        <inlineHelpText>What is the description for a Standard with a Level 3? This will display on Report Cards and Progress report if &quot;Show Standards&quot; is selected on the &quot;Generate Student Documents&quot; page.</inlineHelpText>
        <label>Standard Legend Description 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Text_Spanish__c</fullName>
        <label>Standard Legend Text Spanish</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Standard_Legend_Text__c</fullName>
        <label>Standard Legend Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Standards_Based_Grading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>School-wide setting that will reduce config time if set to false</description>
        <inlineHelpText>Select if school wants to grade standards.  If set to false, users will enter traditional grades without association to standards or standard grades.  If checked, users in the Hybrid or Standard ONLY Gradebook can grade standards.</inlineHelpText>
        <label>Standards Based Grading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standards_ONLY_Gradebook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked if the Standards ONLY gradebook that was designed for ELH should be used.</description>
        <inlineHelpText>Is this school using the Standards ONLY Gradebook? This Gradebook allows users to enter only standard grades.  Please see additional documentation for more information.</inlineHelpText>
        <label>Standards ONLY Gradebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strand_Grade_Mastery_Percentage__c</fullName>
        <inlineHelpText>What does this school define as Strand Mastery? This applies to SO schools only that calculate Strand grades and is used for reporting.</inlineHelpText>
        <label>Strand Grade Mastery %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Students_Created_From_Previous_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Students Created From Previous Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Students_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Students Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summarized_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summarized Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term refers to the Term &apos;Template&apos; that the administrator associates to the School; this contains all Semeser/Quarter/Period logic necessary to create Sessions.</description>
        <label>Term</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Setup</relationshipLabel>
        <relationshipName>Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_1st_Reporting_Period_Start_Date_RC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use the first reporting period&apos;s start date instead of the current reporting period&apos;s start date.</inlineHelpText>
        <label>Use 1st Reporting Period Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Sectional_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, sectional attendance will be used to calculate total time lost.  If not checked, daily attendance will be used to calculate total time lost.</description>
        <inlineHelpText>If checked, sectional attendance will be used to calculate total time lost.  If not checked, daily attendance will be used to calculate total time lost.</inlineHelpText>
        <label>Calculate Time Lost with Sec. Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Assessments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Assessments module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Assessments module for this school year.</inlineHelpText>
        <label>Using Assessments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Attendance module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Attendance module for this school year.</inlineHelpText>
        <label>Using Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Behavior__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Behavior module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Behavior module for this school year.</inlineHelpText>
        <label>Using Behavior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Gradebook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Gradebook module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Gradebook module for this school year.</inlineHelpText>
        <label>Using Gradebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Homework__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Homework module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Homework module for this school year.</inlineHelpText>
        <label>Using Homework</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Meals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Meals module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Meals module for this school year.</inlineHelpText>
        <label>Using Meals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Points module for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Points module for this school year.</inlineHelpText>
        <label>Using Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the student portal for this school year.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the student portal for this school year.</inlineHelpText>
        <label>Using Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Student_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates whether this school is using the Student Documents module for this school year.  NOTE: Student Documents module requires Gradebook module.</description>
        <inlineHelpText>This checkbox indicates whether this school is using the Student Documents module for this school year.</inlineHelpText>
        <label>Using Student Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Using_Summer_School__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will this school offer Summer School at the end of the school year?</inlineHelpText>
        <label>Using Summer School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_End__c</fullName>
        <formula>TEXT(Year__r.End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Start__c</fullName>
        <formula>TEXT( Year__r.Date_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>School Year associated to the Setup</description>
        <label>Year</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Setup (Year)</relationshipLabel>
        <relationshipName>Setup_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>instancelink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>instancelink</label>
        <type>Text</type>
    </fields>
    <label>Setup</label>
    <listViews>
        <fullName>Admin_Setup</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Active__c</columns>
        <columns>Published__c</columns>
        <columns>Year_Start__c</columns>
        <columns>Year_End__c</columns>
        <columns>Configure_Course_Catalog__c</columns>
        <columns>Configure_Grade_Scale_Catalog__c</columns>
        <columns>Configure_School_Term__c</columns>
        <columns>Passing_Grade_Threshold__c</columns>
        <columns>Standards_Based_Grading__c</columns>
        <columns>Group_Based__c</columns>
        <filterScope>Everything</filterScope>
        <label>Admin Setup</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Active__c</columns>
        <columns>Year_Start__c</columns>
        <columns>Year_End__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JSR</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Published__c</columns>
        <columns>New_School_Year__c</columns>
        <columns>Active__c</columns>
        <columns>Configure_Course_Catalog__c</columns>
        <columns>Configure_Grade_Scale_Catalog__c</columns>
        <columns>Term__c</columns>
        <columns>Passing_Grade_Threshold__c</columns>
        <columns>Standards_Based_Grading__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Groups Based Demo School</label>
    </listViews>
    <listViews>
        <fullName>Kim_Test</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Active__c</columns>
        <columns>Year_Start__c</columns>
        <columns>Year_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>T-001555</value>
        </filters>
        <label>Kim Test</label>
    </listViews>
    <listViews>
        <fullName>New_School_Year</fullName>
        <columns>NAME</columns>
        <columns>Published__c</columns>
        <columns>New_School_Year__c</columns>
        <columns>Active__c</columns>
        <columns>Grade_Span__c</columns>
        <columns>Processed_EOY_Data__c</columns>
        <columns>Processed_Historical_Data__c</columns>
        <columns>Purged_EOY_Data__c</columns>
        <columns>Purged_Two_Years_Old_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>JSR</value>
        </filters>
        <label>New School Year</label>
    </listViews>
    <listViews>
        <fullName>specific_school_Test</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>Active__c</columns>
        <columns>Year_Start__c</columns>
        <columns>Year_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>School__c</field>
            <operation>equals</operation>
            <value>Cureton ES</value>
        </filters>
        <label>specific school Test</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup</pluralLabel>
    <recordTypes>
        <fullName>Published</fullName>
        <active>true</active>
        <description>For Published Setups - Not Editable</description>
        <label>Published</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unpublished</fullName>
        <active>true</active>
        <description>Default Setup Record prior to when Setup is published.</description>
        <label>Unpublished</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>