objects/Setup__c/listViews/Admin_Setup.listView-meta.xml
<ListView>
    <fullName>Admin_Setup</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Active__c</columns>
    <columns>Published__c</columns>
    <columns>Year_Start__c</columns>
    <columns>Year_End__c</columns>
    <columns>Configure_Course_Catalog__c</columns>
    <columns>Configure_Grade_Scale_Catalog__c</columns>
    <columns>Configure_School_Term__c</columns>
    <columns>Passing_Grade_Threshold__c</columns>
    <columns>Standards_Based_Grading__c</columns>
    <columns>Group_Based__c</columns>
    <filterScope>Everything</filterScope>
    <label>Admin Setup</label>
</ListView>