objects/Setup__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Active__c</columns>
    <columns>Year_Start__c</columns>
    <columns>Year_End__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>