objects/Setup__c/listViews/JSR.listView-meta.xml
<ListView>
    <fullName>JSR</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Published__c</columns>
    <columns>New_School_Year__c</columns>
    <columns>Active__c</columns>
    <columns>Configure_Course_Catalog__c</columns>
    <columns>Configure_Grade_Scale_Catalog__c</columns>
    <columns>Term__c</columns>
    <columns>Passing_Grade_Threshold__c</columns>
    <columns>Standards_Based_Grading__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Groups Based Demo School</label>
</ListView>