objects/Setup__c/listViews/New_School_Year.listView-meta.xml
<ListView>
    <fullName>New_School_Year</fullName>
    <columns>NAME</columns>
    <columns>Published__c</columns>
    <columns>New_School_Year__c</columns>
    <columns>Active__c</columns>
    <columns>Grade_Span__c</columns>
    <columns>Processed_EOY_Data__c</columns>
    <columns>Processed_Historical_Data__c</columns>
    <columns>Purged_EOY_Data__c</columns>
    <columns>Purged_Two_Years_Old_Data__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School__c</field>
        <operation>equals</operation>
        <value>JSR</value>
    </filters>
    <label>New School Year</label>
</ListView>