objects/Setup__c/listViews/specific_school_Test.listView-meta.xml
<ListView>
    <fullName>specific_school_Test</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Active__c</columns>
    <columns>Year_Start__c</columns>
    <columns>Year_End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School__c</field>
        <operation>equals</operation>
        <value>Cureton ES</value>
    </filters>
    <label>specific school Test</label>
</ListView>